# optimal-congress

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  flake.nix  pyproject.toml  tox.ini
.github/workflows/: pre-commit.yml  pytest.yml
congress_optimizer/: config.py  io.py  main.py  models.py  optimize.py  ratings.py
congress_optimizer/io/: api.py  cache.py
optimal_congress/: cli.py  config.py  models.py  optimize.py  ratings.py  schema.py
optimal_congress/io/: api.py  cache.py
test/integration/optimal_congress/io/: test_api.py
test/unit/optimal_congress/: test_ratings.py  test_schema.py
test/unit/optimal_congress/__pycache__/io/: test_cache.py
tests/congress_optimizer/: test_models.py  test_optimize.py  test_ratings.py
tests/optimal_congress/: test_models.py  test_optimize.py  test_ratings.py  test_schema.py
